--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jszip": "^3.1.5",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
