--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "path": "^0.12.7",
+    "underscore": "^1.8.3",
     "uuid": "^3.2.1",
     "winston": "^2.4.0"
   }
